Fix header overlap on small screen II

--- a/src/styles.css
+++ b/src/styles.css
@@ -238,11 +238,22 @@ footer {
   text-align: center;
 }
 
+@media (max-width: 400px) {
+  header {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 @media (max-width: 750px) {
 
   .menu-item-section {
     width: 100px;
     height: 100px;
+  }
+
+  .navbar {
+    margin: 0 auto;
   }
 }
 
